--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "anomaly/addon-field_type": "3.0.x-dev",
         "anomaly/email-field_type": "3.0.x-dev",
         "anomaly/select-field_type": "3.0.x-dev",
+        "anomaly/integer-field_type": "3.0.x-dev",
         "anomaly/boolean-field_type": "3.0.x-dev",
         "anomaly/multiple-field_type": "3.0.x-dev",
         "anomaly/datetime-field_type": "4.0.x-dev",
