--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "anomaly/datetime-field_type": "4.0.x-dev",
         "anomaly/textarea-field_type": "3.0.x-dev",
         "anomaly/checkboxes-field_type": "3.0.x-dev",
+        "anomaly/relationship-field_type": "3.0.x-dev",
         "anomaly/default_authenticator-extension": "3.0.x-dev"
     },
     "repositories": [{
