--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,6 @@
         "anomaly/streams-platform": "2.0.x-dev",
 
         "anomaly/users-module": "3.0.x-dev",
-        "anomaly/streams-module": "2.0.x-dev",
         "anomaly/dashboard-module": "3.0.x-dev",
 
         "anomaly/flow-theme": "1.0.x-dev"
@@ -41,6 +40,7 @@
 
         "anomaly/maker-extension": "1.0.x-dev",
         "anomaly/installer-module": "3.0.x-dev",
+        "anomaly/documentation-module": "3.0.x-dev",
 
         "anomaly/slug-field_type": "3.0.x-dev",
         "anomaly/text-field_type": "3.0.x-dev",
@@ -54,6 +54,8 @@
         "anomaly/textarea-field_type": "3.0.x-dev",
         "anomaly/checkboxes-field_type": "3.0.x-dev",
         "anomaly/relationship-field_type": "3.0.x-dev",
+
+        "anomaly/local_documentation-extension": "2.0.x-dev",
         "anomaly/default_authenticator-extension": "3.0.x-dev"
     },
     "repositories": [{
