--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/css-selector": "3.1.*",
         "barryvdh/laravel-ide-helper": "^2.6",
 
+        "anomaly/streams-webpack": "1.0.x-dev",
         "anomaly/maker-extension": "1.0.x-dev",
         "anomaly/installer-module": "3.0.x-dev",
 
