--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+INSTALLED=false
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
@@ -9,7 +11,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=streams
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -23,7 +25,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
