--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
 INSTALLED=false
 
-APP_NAME=Laravel
+APP_NAME=Streams
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
+TELESCOPE_ENABLED=false
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
