--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,19 @@ INSTALLED=false
 
 APP_NAME=Streams
 APP_ENV=local
+APP_LOCALE=en
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+APPLICATION_NAME=Default
+APPLICATION_REFERENCE=default
+APPLICATION_DOMAIN=localhost
+
+#@TODO validate .env on install
+ADMIN_EMAIL=
+ADMIN_USERNAME=
+ADMIN_PASSWORD=
 
 LOG_CHANNEL=stack
 TELESCOPE_ENABLED=false
