--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "": "tests/"
         }
     },
     "extra": {
