--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,9 @@ APP_ENV=local
 APP_LOCALE=en
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_REFERENCE=default
+APP_URL=https://streams.local::8890
 
-APPLICATION_NAME=Default
-APPLICATION_REFERENCE=default
-APPLICATION_DOMAIN=localhost
-
-#@TODO validate .env on install
 ADMIN_EMAIL=
 ADMIN_USERNAME=
 ADMIN_PASSWORD=
