--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ ADMIN_PASSWORD=
 ADMIN_THEME=anomaly.theme.flow
 
 LOG_CHANNEL=stack
+DEBUGBAR_ENABLED=true
 TELESCOPE_ENABLED=false
 
 DB_CONNECTION=mysql
