--- a/composer.json
+++ b/composer.json
@@ -18,28 +18,24 @@
         }
     ],
     "require": {
-        "wikimedia/composer-merge-plugin": "~1.4.0",
-
+        "anomaly/flow-theme": "1.0.x-dev",
         "anomaly/streams-platform": "2.0.x-dev",
-
         "anomaly/users-module": "3.0.x-dev",
-
-        "anomaly/flow-theme": "1.0.x-dev"
+        "spatie/once": "^2.1",
+        "wikimedia/composer-merge-plugin": "~1.4.0"
     },
     "require-dev": {
-        "laravel/tinker": "^2.0",
-        "phpunit/phpunit": "^8.0",
-        "facade/ignition": "^1.4",
-        "mockery/mockery": "^1.0",
-        "fzaninotto/faker": "^1.8",
-        "nunomaduro/collision": "^3.0",
-        "barryvdh/laravel-debugbar": "^3.2",
-
-        "anomaly/maker-extension": "1.0.x-dev",
-        "anomaly/installer-module": "3.0.x-dev",
-
         "anomaly/default_authenticator-extension": "3.0.x-dev",
-        "laravel/telescope": "^2.1"
+        "fruitcake/laravel-telescope-toolbar": "^1.1",
+        "anomaly/installer-module": "3.0.x-dev",
+        "anomaly/maker-extension": "1.0.x-dev",
+        "facade/ignition": "^1.4",
+        "fzaninotto/faker": "^1.8",
+        "laravel/telescope": "^2.1",
+        "laravel/tinker": "^2.0",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^8.0"
     },
     "repositories": [{
             "type": "composer",
