--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DEPLOY_REPOSITORY=git@github.com:awesome/example.com.git
+DEPLOY_HEALTH_CHECK=https://example.com
+DEPLOY_SERVER="example@xxx.xxx.xxx.xxx"
+#DEPLOY_COMPOSER_BINARY="php /bin/composer"
+#DEPLOY_PHP_BINARY=php
+
+DEPLOY_PATH=/home/example
+DEPLOY_DEFAULT_BRANCH=master
