--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "facade/ignition": "^2.0",
         "laravel/tinker": "^2.2",
         "mockery/mockery": "^1.3",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "ryanthompson/laravel-filebase": "@dev"
     },
     "repositories": [{
             "type": "composer",
@@ -57,6 +58,13 @@
         {
             "type": "composer",
             "url": "https://development.pyrocms.com"
+        },
+        {
+            "type": "path",
+            "url": "./addons/laravel-filebase",
+            "options": {
+                "symlink": true
+            }
         }
     ],
     "autoload": {
