--- a/composer.json
+++ b/composer.json
@@ -18,21 +18,19 @@
         }
     ],
     "require": {
-        "wikimedia/composer-merge-plugin": "~1.4.0",
-        "anomaly/streams-platform": "2.0.x-dev",
-
-        "anomaly/flow-theme": "1.0.x-dev",
-
-        "anomaly/email-field_type": "3.0.x-dev",
-        "anomaly/slug-field_type": "3.0.x-dev",
-        "anomaly/text-field_type": "3.0.x-dev",
-        "anomaly/select-field_type": "3.0.x-dev",
         "anomaly/boolean-field_type": "3.0.x-dev",
-        "anomaly/multiple-field_type": "3.0.x-dev",
-        "anomaly/datetime-field_type": "4.0.x-dev",
-        "anomaly/textarea-field_type": "3.0.x-dev",
         "anomaly/checkboxes-field_type": "3.0.x-dev",
-        "anomaly/default_authenticator-extension": "3.0.x-dev"
+        "anomaly/datetime-field_type": "4.0.x-dev",
+        "anomaly/default_authenticator-extension": "3.0.x-dev",
+        "anomaly/email-field_type": "3.0.x-dev",
+        "anomaly/flow-theme": "1.0.x-dev",
+        "anomaly/multiple-field_type": "3.0.x-dev",
+        "anomaly/select-field_type": "3.0.x-dev",
+        "anomaly/slug-field_type": "3.0.x-dev",
+        "anomaly/streams-platform": "2.0.x-dev",
+        "anomaly/text-field_type": "3.0.x-dev",
+        "anomaly/textarea-field_type": "3.0.x-dev",
+        "wikimedia/composer-merge-plugin": "~1.4.0"
     },
     "require-dev": {
         "fruitcake/laravel-telescope-toolbar": "^1.2",
