--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ ADMIN_PASSWORD=
 ADMIN_THEME=anomaly.theme.flow
 
 LOG_CHANNEL=stack
-DEBUGBAR_ENABLED=true
+DEBUGBAR_ENABLED=false
 TELESCOPE_ENABLED=false
 
 DB_CONNECTION=mysql
