--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "anomaly/streams-platform": "2.0.x-dev",
+        "anomaly/streams-api": "1.0.x-dev",
         "anomaly/streams-ui": "1.0.x-dev"
     },
     "require-dev": {
