:smoking: Flattening resources, updated dep, added tailwind

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=e41419c00171b61eb11a",
+    "/css/theme.css": "/css/theme.css?id=493d1dcc61de04805223"
 }
