--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "sass-loader": "^8.0.0",
         "tailwindcss": "^1.6.2",
         "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "cypress": "^4.12.1"
     }
 }
