--- a/package.json
+++ b/package.json
@@ -14,17 +14,14 @@
         "browser-sync": "^2.26.12",
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^7.0",
+        "cypress": "^4.12.1",
+        "highlight.js": "^10.1.2",
         "laravel-mix": "^5.0.5",
         "lodash": "^4.17.20",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "^1.7.6",
+        "tailwindcss": "^1.8.0",
         "vue-template-compiler": "^2.6.12"
-    },
-    "dependencies": {
-        "@lottiefiles/lottie-player": "^0.5.1",
-        "cypress": "^4.12.1",
-        "lottie-web": "^5.7.3"
     }
 }
