Custom codeblock scrollbar styling

--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
         "sass-loader": "^8.0.0",
         "tailwindcss": "^1.8.0",
         "vue-template-compiler": "^2.6.12"
-    }
+    },
+    "dependencies": {}
 }
