--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         }
     ],
     "require": {
-        "anomaly/streams-platform": "2.0.x-dev",
-        "anomaly/streams-api": "1.0.x-dev",
-        "anomaly/streams-ui": "1.0.x-dev"
+        "streams/core": "2.0.x-dev",
+        "streams/api": "1.0.x-dev",
+        "streams/ui": "1.0.x-dev"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
