The (anoying) alert saying: "Copy to clipboard functionality will not work unless you use a secure origin" is now a console warning.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=dbf466aaa6b20f398377",
-    "/css/theme.css": "/css/theme.css?id=d063b876c787c91ed7fa"
+    "/js/app.js": "/js/app.js?id=dcf929b131d10721751d",
+    "/css/theme.css": "/css/theme.css?id=34b2e52a2b3dc3ffecd3",
+    "/js/app.js.map": "/js/app.js.map?id=fce68c111b63a642f305",
+    "/css/theme.css.map": "/css/theme.css.map?id=e2b63e655f7c8b8ec615"
 }
