--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
         }
     ],
     "require": {
-        "streams/core": "2.0.x-dev",
-        "streams/api": "1.0.x-dev",
-        "streams/ui": "1.0.x-dev"
+        "streams/core": "^2.0",
+        "streams/api": "^1.0",
+        "streams/ui": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
-        "streams/dev": "1.0.x-dev",
+        "streams/dev": "^1.0",
         "fzaninotto/faker": "^1.9",
         "facade/ignition": "^2.0",
         "mockery/mockery": "^1.3",
@@ -47,7 +47,7 @@
     "extra": {
         "dont-discover": []
     },
-    "prefer-stable": false,
+    "prefer-stable": true,
     "minimum-stability": "dev",
     "config": {
         "bin-dir": "bin",
