--- a/package.json
+++ b/package.json
@@ -10,18 +10,16 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "anchor-js": "^4.2.2",
         "axios": "^0.19",
         "browser-sync": "^2.26.12",
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^7.0",
-        "cypress": "^4.12.1",
-        "highlight.js": "^10.1.2",
-        "laravel-mix": "^5.0.5",
-        "lodash": "^4.17.20",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
+        "highlight.js": "^10.2.1",
+        "laravel-mix": "^5.0.6",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.27.0",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "^1.8.0",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {}
