--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/theme.css": "/css/theme.css"
+    "/js/app.css": "/js/app.css",
+    "/js/app.js": "/js/app.js"
 }
