--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,13 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
-        "streams/cli": "^1.0",
-        "fzaninotto/faker": "^1.9",
         "facade/ignition": "^2.0",
-        "mockery/mockery": "^1.3",
+        "fzaninotto/faker": "^1.9",
         "laravel/tinker": "^2.2",
-        "phpunit/phpunit": "^9.0"
+        "mockery/mockery": "^1.3",
+        "phpunit/phpunit": "^9.0",
+        "spatie/laravel-web-tinker": "^1.7",
+        "streams/cli": "^1.0"
     },
     "repositories": [
         {
