--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "blade-ui-kit/blade-heroicons": "^0.3",
         "owenvoke/blade-fontawesome": "^1.6",
         "blade-ui-kit/blade-icons": "^0.5",
-        "maartenpaauw/undraw": "dev-patch-1",
+        "maartenpaauw/undraw": "^1.0",
         "streams/api": "^1.0",
         "streams/core": "^2.0",
         "streams/ui": "^1.0"
@@ -37,10 +37,6 @@
         {
             "type": "composer",
             "url": "https://packages.pyrocms.com"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/RyanThompson/undraw"
         }
     ],
     "autoload": {
@@ -76,7 +72,8 @@
             "@php artisan queue:restart --ansi"
         ],
         "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "@php artisan key:generate --ansi"
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
