--- a/package.json
+++ b/package.json
@@ -2,25 +2,31 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "anchor-js": "^4.2.2",
-        "axios": "^0.19",
-        "browser-sync": "^2.26.12",
-        "browser-sync-webpack-plugin": "^2.2.2",
+        "axios": "^0.21.1",
         "cross-env": "^7.0",
-        "highlight.js": "^10.2.1",
-        "laravel-mix": "^5.0.6",
+        "laravel-mix": "^6.0.9",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.27.0",
         "sass-loader": "^8.0.0",
+        "ts-loader": "^8.0.13",
+        "typescript": "^4.1.3",
         "vue-template-compiler": "^2.6.12"
     },
-    "dependencies": {}
+    "dependencies": {
+        "@streams/core": "file:vendor/streams/core",
+        "alpinejs": "^2.7.3",
+        "anchor-js": "^4.3.0",
+        "clipboard": "^2.0.6",
+        "prismjs": "^1.23.0",
+        "tailwindcss": "^2.0.0",
+        "tocbot": "^4.12.1"
+    },
+    "name": "streams.dev"
 }
