--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,8 @@ APP_DEBUG=true
 APP_REFERENCE=default
 APP_URL=https://streams.local::8890
 
-ADMIN_EMAIL=
-ADMIN_USERNAME=
-ADMIN_PASSWORD=
-ADMIN_THEME=anomaly.theme.flow
+STREAMS_CP_ENABLED=true
+STREAMS_API_ENABLED=true
 
 LOG_CHANNEL=stack
 DEBUGBAR_ENABLED=false
