--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "exclude-from-classmap": [
+            "vendor/erusev/parsedown-extra/test/"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
