--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "streams/streams",
+    "name": "streams2/streams",
     "description": "",
     "type": "project",
     "keywords": [
@@ -15,10 +15,11 @@
         }
     ],
     "require": {
+        "barryvdh/laravel-ide-helper": "^2.10",
         "blade-ui-kit/blade-heroicons": "^0.3",
-        "owenvoke/blade-fontawesome": "^1.6",
         "blade-ui-kit/blade-icons": "^0.5",
         "maartenpaauw/undraw": "^1.0",
+        "owenvoke/blade-fontawesome": "^1.6",
         "streams/api": "^1.0",
         "streams/core": "^2.0",
         "streams/ui": "^1.0"
@@ -31,12 +32,21 @@
         "mockery/mockery": "^1.3",
         "phpunit/phpunit": "^9.0",
         "spatie/laravel-web-tinker": "^1.7",
+        "spatie/typescript-transformer": "^2.0",
         "streams/cli": "^1.0"
     },
     "repositories": [
         {
             "type": "composer",
             "url": "https://packages.pyrocms.com"
+        },
+        {
+            "type": "path",
+            "url": "packages/streams/core"
+        },
+        {
+            "type": "path",
+            "url": "packages/streams/ui"
         }
     ],
     "autoload": {
