--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "core": "cd packages/streams/core && npm"
     },
     "devDependencies": {
         "axios": "^0.21.1",
@@ -16,11 +17,11 @@
         "sass": "^1.27.0",
         "sass-loader": "^8.0.0",
         "ts-loader": "^8.0.13",
-        "typescript": "^4.1.3",
+        "typescript": "^4.4.3",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "@streams/core": "file:vendor/streams/core",
+        "@laravel-streams/core": "file:packages/streams/core",
         "alpinejs": "^2.7.3",
         "anchor-js": "^4.3.0",
         "clipboard": "^2.0.6",
