--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
         "sass": "^1.27.0",
         "sass-loader": "^8.0.0",
         "ts-loader": "^8.0.13",
-        "typescript": "^4.1.3",
+        "typescript": "^4.4",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "@streams/core": "file:vendor/streams/core",
+        "@laravel-streams/core": "^1.0.2",
         "alpinejs": "^2.7.3",
         "anchor-js": "^4.3.0",
         "clipboard": "^2.0.6",
