--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "@laravel-streams/core": "^1.0.2",
+        "@laravel-streams/core": "file:vendor/streams/core",
         "alpinejs": "^2.7.3",
         "anchor-js": "^4.3.0",
         "clipboard": "^2.0.6",
