--- a/composer.json
+++ b/composer.json
@@ -30,16 +30,15 @@
         "fzaninotto/faker": "^1.9",
         "laravel/tinker": "^2.2",
         "mockery/mockery": "^1.3",
+        "friendsofphp/php-cs-fixer": "^2.19",
         "phpunit/phpunit": "^9.0",
         "spatie/laravel-web-tinker": "^1.7",
         "spatie/typescript-transformer": "^2.0",
-        "streams/cli": "^1.0"
+        "streams/cli": "^1.0",
+        "spatie/schema-org": "3.7.0"
     },
     "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.pyrocms.com"
-        },
+
         {
             "type": "path",
             "url": "packages/streams/core"
@@ -47,6 +46,10 @@
         {
             "type": "path",
             "url": "packages/streams/ui"
+        },
+        {
+            "type": "path",
+            "url": "packages/streams/api"
         }
     ],
     "autoload": {
@@ -74,6 +77,10 @@
         "sort-packages": true
     },
     "scripts": {
+        "reinstall": [
+            "rm -rf vendor **/vendor composer.lock **/composer.lock",
+            "composer update"
+        ],
         "pre-autoload-dump":[
             "rm -Rf bootstrap/cache/*.php"
         ],
