--- a/package.json
+++ b/package.json
@@ -1,33 +1,116 @@
 {
+    "name": "streams.dev",
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "core": "cd packages/streams/core && npm"
+        "streams-api": "yarn workspace @laravel-streams/streams-api",
+        "mix-extension": "yarn workspace @laravel-streams/mix-extension",
+        "core": "yarn workspace @laravel-streams/core",
+        "api": "yarn workspace @laravel-streams/api",
+        "ui": "yarn workspace @laravel-streams/ui",
+        "test": "node -r ts-node/esm/transpile-only test.ts",
+        "uninstall": "rimraf pnpm-lock.yaml node_modules packages/*/*/node_modules package-lock.json yarn.lock packages/*/*/package-lock.json packages/*/*/yarn.lock",
+        "reinstall": "yarn install"
+    },
+    "workspaces": [
+        "packages/*/*"
+    ],
+    "dependencies": {
+        "@laravel-streams/api": "^1.0.0",
+        "@laravel-streams/core": "^1.0.0",
+        "@laravel-streams/mix-extension": "^1.0.0",
+        "@laravel-streams/streams-api": "^1.0.0",
+        "@laravel-streams/ui": "^1.0.0",
+        "@radic/console-input": "^1.7.1",
+        "@radic/console-output": "^1.4.3"
     },
     "devDependencies": {
-        "axios": "^0.21.1",
-        "cross-env": "^7.0",
-        "laravel-mix": "^6.0.9",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.27.0",
-        "sass-loader": "^8.0.0",
-        "ts-loader": "^8.0.13",
-        "typescript": "^4.4.3",
-        "vue-template-compiler": "^2.6.12"
-    },
-    "dependencies": {
-        "@laravel-streams/core": "file:packages/streams/core",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/preset-env": "^7.15.6",
+        "@radic/rmrf": "^1.0.2",
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-node-resolve": "^13.0.6",
+        "@rollup/plugin-typescript": "^8.3.0",
+        "@testdeck/mocha": "^0.1.2",
+        "@types/btoa": "^1.2.3",
+        "@types/chai": "^4.2.22",
+        "@types/debug": "^4.1.7",
+        "@types/faker": "^5.5.8",
+        "@types/glob": "^7.2.0",
+        "@types/grunt": "^0.4.27",
+        "@types/inquirer": "^8.1.3",
+        "@types/jsdom": "^16.2.13",
+        "@types/lz-string": "^1.3.34",
+        "@types/mocha": "^9.0.0",
+        "@types/node": "^16.10.1",
+        "@types/qs": "^6.9.7",
+        "@types/should": "^13.0.0",
+        "@types/should-sinon": "^0.0.8",
+        "@types/sinon": "^10.0.4",
+        "@types/sinon-chai": "^3.2.5",
+        "@types/superagent": "^4.1.13",
+        "@types/yargs-parser": "^20.2.1",
         "alpinejs": "^2.7.3",
         "anchor-js": "^4.3.0",
+        "axios": "^0.21.1",
+        "btoa": "^1.2.1",
+        "chai": "^4.3.4",
+        "chai-http": "^4.3.0",
         "clipboard": "^2.0.6",
+        "concurrently": "^6.3.0",
+        "cross-env": "^7.0",
+        "dotenv": "^10.0.0",
+        "faker": "^5.5.3",
+        "glob": "^7.2.0",
+        "inquirer": "^8.2.0",
+        "jsdom": "^18.0.0",
+        "laravel-mix": "^6.0.9",
+        "lodash": "^4.17",
+        "lz-string": "^1.4.4",
+        "mocha": "^9.1.2",
+        "node-fetch": "^3.0.0",
+        "npm-run-all": "^4.1.5",
+        "nyc": "^15.1.0",
+        "postcss": "^8.1",
+        "pretender": "^3.4.7",
         "prismjs": "^1.23.0",
+        "resolve-url-loader": "^3.1.2",
+        "rimraf": "^3.0.2",
+        "rollup": "^2.58.0",
+        "rollup-plugin-dts": "^4.0.0",
+        "rollup-plugin-polyfill-node": "^0.7.0",
+        "rollup-plugin-progress": "^1.1.2",
+        "rollup-plugin-size-snapshot": "^0.12.0",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.30.0",
+        "rollup-plugin-visualizer": "^5.5.2",
+        "sass": "^1.27.0",
+        "sass-loader": "^8.0.0",
+        "should": "^13.2.3",
+        "should-sinon": "^0.0.6",
+        "sinon": "^11.1.2",
+        "sinon-chai": "^3.7.0",
+        "source-map-support": "^0.5.20",
         "tailwindcss": "^2.0.0",
-        "tocbot": "^4.12.1"
-    },
-    "name": "streams.dev"
+        "tocbot": "^4.12.1",
+        "ts-lib": "^0.0.5",
+        "ts-loader": "^8.0.13",
+        "ts-mocha": "^8.0.0",
+        "ts-node": "10.0.0",
+        "tsconfig-paths": "^3.11.0",
+        "typedoc": "^0.22.5",
+        "typedoc-neo-theme": "^1.1.1",
+        "typedoc-plugin-custom-tags": "^1.0.2",
+        "typedoc-plugin-external-module-name": "^4.0.6",
+        "typedoc-plugin-extras": "^2.2.0",
+        "typedoc-plugin-inline-sources": "^1.0.0",
+        "typedoc-plugin-markdown": "^3.11.3",
+        "typedoc-plugin-merge-modules": "^3.0.2",
+        "typedoc-plugin-mermaid": "^1.4.0",
+        "typedoc-wrapper": "^6.0.0",
+        "typescript": "^4.4.4",
+        "vue-template-compiler": "^2.6.12",
+        "webpack-cli": "^4.8.0",
+        "webpack-merge": "^5.8.0",
+        "whatwg-fetch": "^3.6.2"
+    }
 }
