--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "streams2/streams",
+    "name": "streams/streams",
     "description": "",
     "type": "project",
     "keywords": [
@@ -20,21 +20,21 @@
         "blade-ui-kit/blade-icons": "^0.5",
         "maartenpaauw/undraw": "^1.0",
         "owenvoke/blade-fontawesome": "^1.6",
-        "streams/api": "^1.0",
         "streams/core": "^2.0",
+        "streams/api": "^1.0",
         "streams/ui": "^1.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.3",
-        "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.9",
+        "streams/cli": "^1.0",
         "laravel/tinker": "^2.2",
         "mockery/mockery": "^1.3",
-        "friendsofphp/php-cs-fixer": "^2.19",
         "phpunit/phpunit": "^9.0",
+        "facade/ignition": "^2.0",
+        "fzaninotto/faker": "^1.9",
+        "barryvdh/laravel-debugbar": "^3.3",
         "spatie/laravel-web-tinker": "^1.7",
-        "spatie/typescript-transformer": "^2.0",
-        "streams/cli": "^1.0",
+        "friendsofphp/php-cs-fixer": "^2.19",
+        "spatie/typescript-transformer": "^1.0",
         "spatie/schema-org": "3.7.0"
     },
     "repositories": [
