Install web-tinker

--- a/composer.json
+++ b/composer.json
@@ -100,7 +100,8 @@
             "@php artisan queue:restart --ansi"
         ],
         "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "@php artisan web-tinker:install --ansi"
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
