--- a/package.json
+++ b/package.json
@@ -2,20 +2,15 @@
     "name": "streams.dev",
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "streams-api": "yarn workspace @laravel-streams/streams-api",
-        "mix-extension": "yarn workspace @laravel-streams/mix-extension",
-        "core": "yarn workspace @laravel-streams/core",
-        "api": "yarn workspace @laravel-streams/api",
-        "ui": "yarn workspace @laravel-streams/ui",
-        "test": "node -r ts-node/esm/transpile-only test.ts",
+        "streams-api": "cd packages/@laravel-streams/streams-api && yarn",
+        "mix-extension": "cd packages/@laravel-streams/mix-extension && yarn",
+        "core": "cd packages/streams/core && yarn",
+        "api": "cd packages/streams/api && yarn",
+        "ui": "cd packages/streams/ui && yarn",
+        "test": "node -r ts-node/esm/transpile-only resources/ts/index.ts",
         "uninstall": "rm -rf node_modules yarn.lock packages/*/*/node_modules packages/*/*/yarn.lock\n",
-        "reinstall": "yarn install"
+        "reinstall": "yarn uninstall && yarn install",
+        "postinstall": "curl https://gist.githubusercontent.com/SamJakob/6fd2f06cc38242557e5d2d50fbe7a157/raw/62bae510910db76c9ef503b92288b429c62a4206/typedoc_package.json > ./node_modules/typedoc/package.json"
     },
     "workspaces": [
         "packages/*/*"
@@ -24,17 +19,30 @@
         "@laravel-streams/api": "^1.0.0",
         "@laravel-streams/core": "^1.0.0",
         "@laravel-streams/mix-extension": "^1.0.0",
-        "@laravel-streams/streams-api": "^1.0.0",
+        "@laravel-streams/api-client": "^1.0.0",
+        "@laravel-streams/ui": "^1.0.0",
         "@radic/console-input": "^1.7.1",
-        "@radic/console-output": "^1.4.3"
+        "@radic/console-output": "^1.6.0",
+        "cli-table2": "^0.2.0",
+        "cli-table3":"^0.6.0",
+        "listr": "^0.14.3"
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/preset-env": "^7.15.6",
         "@radic/rmrf": "^1.0.3",
         "@rollup/plugin-commonjs": "^21.0.1",
-        "@rollup/plugin-node-resolve": "^13.0.6",
+        "@rollup/plugin-node-resolve": "^13.1.1",
         "@rollup/plugin-typescript": "^8.3.0",
+        "rollup-plugin-polyfill-node": "^0.8.0",
+        "rollup-plugin-analyzer": "^4.0.0",
+        "rollup": "^2.58.0",
+        "rollup-plugin-dts": "^4.0.0",
+        "rollup-plugin-progress": "^1.1.2",
+        "rollup-plugin-size-snapshot": "^0.12.0",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.30.0",
+        "rollup-plugin-visualizer": "^5.5.2",
         "@testdeck/mocha": "^0.1.2",
         "@types/btoa": "^1.2.3",
         "@types/chai": "^4.2.22",
@@ -65,6 +73,11 @@
         "cross-env": "^7.0",
         "dotenv": "^10.0.0",
         "faker": "^5.5.3",
+        "filesize": "^8.0.6",
+        "@types/filesize": "^5.0.0",
+        "markdown-it": "^12.3.0",
+        "@types/markdown-it": "^12.2.3",
+        "np": "^7.5.0",
         "glob": "^7.2.0",
         "inquirer": "^8.2.0",
         "jsdom": "^18.0.0",
@@ -73,7 +86,6 @@
         "lz-string": "^1.4.4",
         "mocha": "^9.1.2",
         "node-fetch": "^3.0.0",
-        "np": "^7.5.0",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
         "postcss": "^8.1",
@@ -81,18 +93,37 @@
         "prismjs": "^1.23.0",
         "resolve-url-loader": "^3.1.2",
         "rimraf": "^3.0.2",
-        "rollup": "^2.58.0",
-        "rollup-plugin-dts": "^4.0.0",
-        "rollup-plugin-polyfill-node": "^0.7.0",
-        "rollup-plugin-progress": "^1.1.2",
-        "rollup-plugin-size-snapshot": "^0.12.0",
-        "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.30.0",
-        "rollup-plugin-visualizer": "^5.5.2",
         "sass": "^1.27.0",
         "sass-loader": "^8.0.0",
+        "should": "^13.2.3",
+        "should-sinon": "^0.0.6",
+        "sinon": "^11.1.2",
+        "sinon-chai": "^3.7.0",
+        "source-map-support": "^0.5.20",
+        "tslib": "^2.3.1",
         "ts-loader": "^8.0.13",
-        "typescript": "^4.4",
-        "vue-template-compiler": "^2.6.12"
+        "ts-mocha": "^8.0.0",
+        "ts-node": "10.0.0",
+        "tsconfig-paths": "^3.11.0",
+        "source-map": "^0.7.3",
+        "terser": "^5.10.0",
+        "typedoc": "^0.22.10",
+        "typedoc-neo-theme": "^1.1.1",
+        "typedoc-plugin-custom-tags": "^1.0.2",
+        "typedoc-plugin-external-module-name": "^4.0.6",
+        "typedoc-plugin-extras": "^2.2.0",
+        "typedoc-plugin-inline-sources": "^1.0.0",
+        "typedoc-plugin-markdown": "^3.11.3",
+        "typedoc-plugin-merge-modules": "^3.0.2",
+        "typedoc-plugin-mermaid": "^1.4.0",
+        "typedoc-scalefast-theme": "^1.0.3",
+        "typedoc-plugin-pages": "^1.1.0",
+        "typedoc-theme-slick-dark": "^1.0.4",
+        "@types/lunr": "^2.3.4",
+        "typedoc-wrapper": "^6.0.0",
+        "typescript": "^4.4.4",
+        "webpack-cli": "^4.8.0",
+        "webpack-merge": "^5.8.0",
+        "whatwg-fetch": "^3.6.2"
     }
 }
