--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
-        "streams/core": "^2.0",
         "streams/api": "^1.0",
+        "streams/core": "^2.0",
         "streams/ui": "^1.0"
     },
     "require-dev": {
@@ -21,6 +21,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-web-tinker": "^1.8",
         "spatie/laravel-ignition": "^1.0"
     },
     "repositories": [
