--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "sass": "^1.54.5",
         "tailwindcss": "^3.1.8",
         "vite": "^3.0.0"
     }
