--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "vite": "^3.0.0",
         "axios": "^0.27",
-        "laravel-vite-plugin": "^0.5.0",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
         "sass": "^1.54.5",
+        "lodash": "^4.17.19",
+        "postcss": "^8.4.16",
         "tailwindcss": "^3.1.8",
-        "vite": "^3.0.0"
+        "autoprefixer": "^10.4.12",
+        "laravel-vite-plugin": "^0.5.0"
     }
 }
