--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "vite": "^3.0.0",
+        "autoprefixer": "^10.4.12",
         "axios": "^0.27",
-        "sass": "^1.54.5",
+        "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.16",
+        "sass": "^1.54.5",
         "tailwindcss": "^3.1.8",
-        "autoprefixer": "^10.4.12",
-        "laravel-vite-plugin": "^0.5.0"
+        "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.10.3"
     }
 }
