--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "streams/core": "^2.0",
+        "streams/api": "^1.0",
         "streams/ui": "^1.0"
     },
     "require-dev": {
