--- a/public/.htaccess
+++ b/public/.htaccess
@@ -9,6 +9,14 @@
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
+    # Redirect to non-www
+    #RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+    #RewriteRule ^(.*)$ http://domain.com/$1 [R=301,L]
+    
+    # Redirect to www
+    #RewriteCond %{HTTP_HOST} !^www\.(.*)$ [NC]
+    #RewriteRule ^(.*)$ http://www.domain.com/$1 [R=301,L]
+
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
