--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.12",
-        "axios": "^0.27",
-        "laravel-vite-plugin": "^0.5.0",
+        "vite": "^4.0.0",
+        "laravel-vite-plugin": "^0.8.0",
+        "axios": "^1.1.2",
+        "sass": "^1.54.5",
         "lodash": "^4.17.19",
         "postcss": "^8.4.16",
-        "sass": "^1.54.5",
-        "tailwindcss": "^3.1.8",
-        "vite": "^3.0.0"
+        "autoprefixer": "^10.4.12",
+        "tailwindcss": "^3.3.0",
+        "@tailwindcss/forms": "^0.5.6",
+        "@tailwindcss/typography": "^0.5.10"
     },
     "dependencies": {
         "alpinejs": "^3.10.3"
