--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,77 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+<IfModule mod_expires.c>
+    ExpiresActive on
+
+    #ExpiresDefault "access plus 1 month"
+
+    # HTML
+    ExpiresByType text/html "access plus 0 seconds"
+
+    # Favicon
+    ExpiresByType image/x-icon "access plus 1 week"
+
+    # CSS and JavaScript
+    ExpiresByType text/css "access plus 4 months"
+    ExpiresByType application/javascript "access plus 4 months"
+
+    # Media
+    ExpiresByType audio/ogg "access plus 2 months"
+    ExpiresByType image/bmp "access plus 2 months"
+    ExpiresByType image/gif "access plus 2 months"
+    ExpiresByType image/png "access plus 2 months"
+    ExpiresByType video/mp4 "access plus 2 months"
+    ExpiresByType video/ogg "access plus 2 months"
+    ExpiresByType image/jpeg "access plus 2 months"
+    ExpiresByType image/webp "access plus 2 months"
+    ExpiresByType video/webm "access plus 2 months"
+    ExpiresByType image/svg+xml "access plus 2 months"
+    
+    # Fonts
+    ExpiresByType font/eot "access plus 2 months"
+    ExpiresByType font/woff "access plus 2 months"
+    ExpiresByType font/opentype "access plus 2 months"
+    ExpiresByType application/font-woff "access plus 2 months"
+    ExpiresByType application/font-woff2 "access plus 2 months"
+    ExpiresByType application/x-font-ttf "access plus 2 months"
+    ExpiresByType application/x-font-woff "access plus 2 months"
+    ExpiresByType application/vnd.ms-fontobject "access plus 2 months"
+
+    # Data
+    ExpiresByType text/xml "access plus 0 seconds"
+    ExpiresByType application/xml "access plus 0 seconds"
+    ExpiresByType application/json "access plus 0 seconds"
+
+    # Feeds
+    ExpiresByType application/rss+xml "access plus 1 hour"
+    ExpiresByType application/atom+xml "access plus 1 hour"
+</IfModule>
+
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/javascript
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE image/x-icon
+    AddOutputFilterByType DEFLATE image/svg+xml
+    AddOutputFilterByType DEFLATE font/woff2
+    AddOutputFilterByType DEFLATE font/woff
+    AddOutputFilterByType DEFLATE font/ttf
+    AddOutputFilterByType DEFLATE font/otf
+    AddOutputFilterByType DEFLATE font/opentype
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/x-javascript
+    AddOutputFilterByType DEFLATE application/x-font-woff2
+    AddOutputFilterByType DEFLATE application/x-font-woff
+    AddOutputFilterByType DEFLATE application/x-font-ttf
+    AddOutputFilterByType DEFLATE application/x-font-truetype
+    AddOutputFilterByType DEFLATE application/x-font-otf
+    AddOutputFilterByType DEFLATE application/x-font-opentype
+    AddOutputFilterByType DEFLATE application/x-font
+    AddOutputFilterByType DEFLATE application/vnd.ms-fontobject
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/javascript
+</IfModule>
